--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Proyecto de Desarrollo Web utilizando Git</title>
+    <title>Proyecto de Desarrollo Web utilizando Git Equipo noticias</title>
     <meta charset="UTF-8" />
     <meta name="description" content="Práctica 2 - TIII" />
     <meta name="keywords" content="HTML5, CSS3, GIT, GITHUB, PHP, MARIADB " />
