Se agregó el formulario para alta de usuario

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                <input type="submit" id="btne" name="btn_ingresar" value="Iniciar Sesión">
            </div>
            <div class="olvido"><a href="rcontrasenia.php" target="_blank">¿Olvidaste tu contraseña?</a></div>
+            <div class="olvido"><a href="alta_usuario.html" target="_blank">¿No te has registrado aún?</a></div>
        </form>
        
         <article></article>
