--- a/alta_usuario.html
+++ b/alta_usuario.html
@@ -18,35 +18,35 @@
         <!-- TERMINAN ETIQUETAS NUEVAS -->
     </head>
     <body>
-        <form class="contenedor">
+        <form action="Modelo/agregarUsuario.php" class="contenedor" method="POST">
             <div class="thumbnail">
                 <h3>Alta de usuario</h3>
-            <div class="form-group">
-                <label for="inputNombre">Nombre</label>
-                <input type="text" class="form-control"  placeholder="Nombre">
-            </div>
-            <div class="form-group">
-                <label for="inputApellidos">Apellidos</label>
-                <input type="text" class="form-control"  placeholder="Apellidos">
-            </div>
-            <div class="form-group">
-                <label for="inputUsuario">Usuario</label>
-                <input type="text" class="form-control"  placeholder="Usuario">
-            </div>
-            <div class="form-group">
-                <label for="inputEmail">Email</label>
-                <input type="email" class="form-control"  placeholder="Email">
-            </div>
-            <div class="form-group">
-                <label for="inputPassword">Contraseña</label>
-                <input type="password" class="form-control" placeholder="Contraseña">
-            </div>
-            <div class="form-group">
-                <label for="inputPassword">Confirmar contraseña</label>
-                <input type="password" class="form-control" placeholder="Contraseña">
-            </div>
-            <button type="submit" class="btn btn-primary">Regristrar</button>
-            <button type="reset" class="btn btn-primary">Limpiar</button>
+                <div class="form-group">
+                    <label for="inputNombre">Nombre</label>
+                    <input type="text" name="c_nombre" class="form-control"  placeholder="Nombre">
+                </div>
+                <div class="form-group">
+                    <label for="inputApellidos">Apellidos</label>
+                    <input type="text" name="c_apellido" class="form-control"  placeholder="Apellidos">
+                </div>
+                <div class="form-group">
+                    <label for="inputUsuario">Usuario</label>
+                    <input type="text" name="c_usuario" class="form-control"  placeholder="Usuario">
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail">Email</label>
+                    <input type="email"  name="c_email" class="form-control"  placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword">Contraseña</label>
+                    <input type="password" name="c_password" class="form-control" placeholder="Contraseña">
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword">Confirmar contraseña</label>
+                    <input type="password" class="form-control" placeholder="Contraseña">
+                </div>
+                <button type="submit" class="btn btn-primary" name="registrar">Regristrar</button>
+                <button type="reset" class="btn btn-primary">Limpiar</button>
             </div>
         </form>
     </body>
