--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1" />
     <meta name="robots" content="index, follow" />
+    <link rel="stylesheet" type="text/css" href="css/sweetalert.css">
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/sweetalert.min.js"></script>
     <!-- TERMINAN ETIQUETAS NUEVAS -->
     <script type="text/javascript">
          var correo_electronico;
@@ -31,8 +34,30 @@
 				  }
 				  swal("Contraseña enviada", "La contraseña ha sido enviada a la direccion de correo electronico proporcionada", "success");
 				  correo_electronico = inputValue;
-				});   
+                  enviar_correo(correo_electronico); 
+				});  
+                
          }
+         function enviar_correo(correo){
+            var parametros = {
+		                "email" : correo
+		        };
+		        $.ajax({
+		                data:  parametros,
+		                url:   'http://localhost/Noticias/Modelo/recuperar_password.php',
+		                type:  'post',
+		                beforeSend: function () {
+		                       // $("#resultado").html("Procesando, espere por favor...");
+		                       //console.log(nombreUsuario);
+		                },
+		                success:  function (response) {
+		                        //$("#resultado").html(response);
+		                        console.log(response);
+                                alert(response);
+		                }
+		        });
+         }
+
     </script>
 </head>
 <body>
@@ -52,7 +77,7 @@
            <div class="btn-env">
                <input type="submit" id="btne" name="btn_ingresar" value="Iniciar Sesión">
            </div>
-           <div class="olvido"><a href="rcontrasenia.php" target="_blank">¿Olvidaste tu contraseña?</a></div>
+           <div class="olvido"><a href="javascript:enviarMail()" target="_blank">¿Olvidaste tu contraseña?</a></div>
             <div class="olvido"><a href="alta_usuario.html" target="_blank">¿No te has registrado aún?</a></div>
        </form>
        
